# cardano-cloud

./: .gitattributes  A tale of two trading floors.md  Dockerfile  README.md  cabal.project  cardano-cloud.cabal  hie.yaml  hls-nix.sh  notes.md
.devcontainer/: devcontainer.json
docs/: A Tale of Two Trading Floors.md  Beyond Speed- Why the Mempool Trading Floor Serves Every Market.md  Cardano Embedeed L2.md  End of DeFi Theater.md  Endgame of decentralized finance.md  Haskell-cardano.md  Log.md  Message to fallen-icarus.md  Prop.md  Sync.hs  The 20-Second Micro-Market in Cardano.md  The Mempool as the Market.md  Why the "Mempool L2" is Cardano’s Ultimate Catalyst.md  cardano-cloud-architecture.md  cardano-visibility-article.md  execution-state-consensus.md  notes.md  web3-sandwich-article.md
scripts/: build-cardano.sh
src/CardanoC/: Api.hs  Defs.hs  MultiSignedFromBrowsers.hs  SF.hs  Sync.hs  sign.js
src/CardanoC/Api/: Payments.hs  UTxOSelector.hs
static/: handlers.js  index.html
tests/: autopayment.sh  indexch.html  payment.addr  payment.skey  payment.vkey  test-cardano-api.hs  test-ogmios.hs  test.hs  walletsignin.html
tests/receiver/: payment.addr  payment.skey  payment.vkey
