name:                cardano-cloud
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/gemini/cardano-cloud#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2024 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CardanoC.SF
                       CardanoC.Api
                       CardanoC.Api.UTxOSelector
                       
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
                     , transient
                     , transient-universe
                     , cardano-api

                     , text
                     , syb
                     , base16-bytestring
                     , bytestring
                     , data-default
                     , random

                     , aeson
                     
  default-language:    Haskell2010

executable cardano-cloud-test
  hs-source-dirs:      tests
  main-is:             test.hs
  default-language:    Haskell2010
  build-depends:       base
                     , cardano-cloud
                     , cardano-api
                     , transient
                     , transient-universe
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
