name:                cardano-cloud
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/gemini/cardano-cloud#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2024 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CardanoC.Defs
                       CardanoC.SF
                       CardanoC.Api
                       CardanoC.Sync
                       CardanoC.Api.Payments
                       CardanoC.Api.UTxOSelector
                       CardanoC.MultiSignedFromBrowsers
                       
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
                     , transient
                     , transient-universe
                     , TCache
                     , cardano-api
                     , cardano-ledger-core
                     , cardano-ledger-binary
                     , cardano-ledger-api
                     , cardano-ledger-alonzo
                     , cardano-ledger-conway
                     , cardano-binary
                     , ouroboros-network-protocols
                     , ouroboros-network-framework
                     , text
                     , syb
                     , base16-bytestring
                     , bytestring
                     , data-default
                     , random
                     , aeson
                     ,base64-bytestring
                     , time
                     , stm
                     , parsec


  default-language:    Haskell2010

executable cardano-cloud-test
  hs-source-dirs:      tests
  main-is:             test.hs
  default-language:    Haskell2010
  build-depends:       base
                     , containers
                     , mtl
                     , cardano-cloud
                     , cardano-api
                     , transient
                     , transient-universe
                     , text
                     , aeson
                     , bytestring
                     , base16-bytestring
                     , stm
                     , TCache
                     , data-default

  -- DEBUG: eventlog for post-mortem analysis (remove when done)
  build-depends:       time
  ghc-options:         -threaded -rtsopts -eventlog -with-rtsopts="-N -M1500m"
